# Batap-Engine

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.cmd  build_msvc.bat  compile_commands.json  format_clang.ps1  imgui.ini  mkdocs.yml  msvc-ninja.cmake  tree.txt  treeScript.ps1
doc/: Doxyfile
doc/html/: _app_8h_source.html  _assert_utils_8h_source.html  _camera_8h_source.html  _command_queue_8h_source.html  _d_x12_compute_context_8h_source.html  _d_x12_context_8h_source.html  _d_x12_resource_8h_source.html  _direrct_x_math_op_8h_source.html  _input_manager_8h_source.html  _plane_render_target_8h_source.html  _voxel_data_structs_8h_source.html  annotated.html  annotated_dup.js  class_command_queue-members.html  class_command_queue.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  include_d_x12_8h_source.html  index.html  navtreedata.js  navtreeindex0.js  struct_camera-members.html  struct_camera.html  struct_camera_buffer-members.html  struct_camera_buffer.html  struct_d_x12_compute_context-members.html  struct_d_x12_compute_context.html  struct_d_x12_context-members.html  struct_d_x12_context.html  struct_d_x12_resource-members.html  struct_d_x12_resource.html  struct_input_manager-members.html  struct_input_manager.html  struct_plane_render_target-members.html  struct_plane_render_target.html  struct_vertex_data-members.html  struct_vertex_data.html  (+8 more)
doc/html/search/: all_0.js  all_3.js  classes_1.js  classes_4.js  classes_5.js  searchdata.js
doc/latex/: _app_8h_source.tex  _assert_utils_8h_source.tex  _camera_8h_source.tex  _command_queue_8h_source.tex  _d_x12_compute_context_8h_source.tex  _d_x12_context_8h_source.tex  _d_x12_resource_8h_source.tex  _direrct_x_math_op_8h_source.tex  _input_manager_8h_source.tex  _plane_render_target_8h_source.tex  _voxel_data_structs_8h_source.tex  annotated.tex  class_command_queue.tex  files.tex  include_d_x12_8h_source.tex  refman.tex  struct_camera.tex  struct_camera_buffer.tex  struct_d_x12_compute_context.tex  struct_d_x12_context.tex  struct_d_x12_resource.tex  struct_input_manager.tex  struct_plane_render_target.tex  struct_vertex_data.tex  struct_voxel_data_structs_1_1_chunk.tex  struct_voxel_data_structs_1_1_s_v_o.tex  struct_voxel_data_structs_1_1_s_v_o__node.tex  struct_voxel_data_structs_1_1_voxel.tex
docs/: engine.md  index.md  renderer.md
engine/: index.html
search/: search_index.json
site/: index.html
site/renderer/: index.html
src/: App.cpp  App.h  Bbox.cpp  Bbox.h  Bbox.hpp  Camera.h  Context.cpp  Context.h  DX12Buffers.h  DX12ComputeContext.cpp  DX12ComputeContext.h  DX12Context.h  DebugUtils.cpp  DebugUtils.h  DirerctXMathOp.h  DirtyFlag.h  EigenTypes.h  Handles.h  InputManager.cpp  InputManager.h  MeshImporter.cpp  MeshImporter.h  PlaneRenderTarget.h  Renderer.cpp  Renderer.h  SVO.cpp  SVO.h  Scene.cpp  Scene.h  TestScene.cpp  TestScene.h  ThreadSafeMsgBus.h  VariantUtils.h  VoxelDataStructs.cpp  VoxelDataStructs.h  VoxelRayScene.cpp  VoxelRayScene.h  main.cpp
src/Assets/: AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetSlotMap.h  Mesh.h  Texture.h
src/Components/: Camera_C.cpp  Camera_C.h  ComponentFlag.h  ComponentFlags.h  ComponentToFlag.h  ComponentTraits.h  DirtyBits.h  EntityHandle.h  IGPUComponent.h  Mesh_C.h  RenderInstanceID_C.h  Transform_C.cpp  Transform_C.h  VoxelMap_C.h
src/Editor/: App.cpp  App.h  CMakeLists.txt  TestScene.cpp  TestScene.h  WindowsApp.cpp  WindowsApp.h  main.cpp
src/Editor/UI/: AssetHolder.cpp  AssetHolder.h  UIPanels.cpp  UIPanels.h
src/Engine/: CmakeLists.txt  Context.cpp  Context.h  DebugUtils.cpp  DebugUtils.h  IApp.h  InputManager.h  SVO.cpp  Scene.cpp  Scene.h  TracyInclude.h  VoxelDataStructs.cpp  VoxelDataStructs.h  World.cpp  World.h
src/Engine/Assets/: AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetSlotMap.h  Texture.h
src/Engine/Components/: Camera_C.h  ComponentFlag.h  ComponentToFlag.h  EntityHandle.h  FreeCamController_C.h  Mesh_C.h  Name_C.h  PointLight_C.h  RenderInstanceID_C.h  Transform_C.h
src/Engine/Importers/: FileImporter.cpp  FileImporter.h  MeshImporter.cpp
src/Engine/Instance/: EntityFactory.cpp  EntityFactory.h  InstanceKind.h  InstanceManager.cpp  InstanceManager.h  instanceDeclaration.h
src/Engine/Renderer/: CommandQueue.cpp  DescriptorHeapAllocator.cpp  EngineConfig.h  Renderer.cpp  ResourceFormatWrapper.h  ResourceManager.cpp  ResourceManager.h  ResourceName.h  SceneRenderer.cpp  SceneRenderer.h  Shaders.cpp  Shaders.h  includeDX12.h
src/Engine/Shaders/: PixelShader.hlsl  VertexShader.hlsl
src/Engine/Systems/: CameraSystem.h  FreeCamControllerSystem.cpp  FreeCamControllerSystem.h  Systems.cpp  Systems.h  TransformSystem.cpp  TransformSystem.h
src/Engine/UI/: imguiConfig.h
src/Engine/Utils/: SlotMap.h  UIDGenerator.cpp  UIDGenerator.h
src/Engine/WindowsUtils/: FileDialog.cpp  FileDialog.h
src/Entities/: Entity.h
src/Importers/: FileImporter.cpp  FileImporter.h  MeshImporter.cpp  MeshImporter.h
src/Instance/: EntityFactory.cpp  EntityFactory.h  InstanceKind.h  InstanceManager.cpp  InstanceManager.h  instanceDeclaration.h
src/Renderer/: AssertUtils.h  CommandQueue.cpp  CommandQueue.h  DX12Context.cpp  DX12Resource.h  DescriptorHeapAllocator.cpp  DescriptorHeapAllocator.h  Descriptorhandle.h  EngineConfig.h  FenceManager.h  GPUHandle.h  GPU_GUID.h  PendingUpload.h  RenderGraph.h  RenderPass.h  Renderer.cpp  Renderer.h  ResourceFormatWrapper.h  ResourceManager.cpp  ResourceManager.h  ResourceName.h  SceneRenderer.cpp  SceneRenderer.h  Shaders.cpp  Shaders.h
src/Shaders/: ComputeShader.hlsl  ComputeShader_test.hlsl  PixelShader.hlsl  VertexShader.hlsl
src/Systems/: CameraSystem.h  Systems.cpp  Systems.h  TransformSystem.cpp  TransformSystem.h
src/UI/: AssetHolder.cpp  AssetHolder.h  Buttons.h  UIPanels.cpp  UIPanels.h  imguiConfig.h
src/Utils/: SlotMap.h
src/WindowsUtils/: FileDialog.cpp  FileDialog.h
